docs(readme): rewrite intro with war-story hook and engagement footer
Replace the abstract "Most chaos tools attack from outside" pitch with
a concrete on-call war-story (Redis replication lag during pod drain)
followed by an eight-line @ChaosTest reproduction. Lead with the pain
the reader has personally been in, then show the fix.

* Title tagline replaced with the project's actual purpose: "the
  failures that page your on-call become commits that fail in PR
  review" — concrete, defensible, memorable.

* Add framework badges (Spring Boot 3 & 4, Quarkus, Micronaut) so
  the multi-framework support is visible at first glance.

* New "What questions does it answer?" subsection lists six concrete
  reliability questions that map 1:1 to operation types this agent
  wires (HikariPool resilience, replica routing, circuit-breaker
  timing, DNS slowdown, GC-induced consumer lag, per-connection
  latency consistency). Stops the README being a feature list and
  starts it being a problem-solver.

* Three-layer-stack section now links to the actual sibling repos
  (chaos-testing, chaos-testing-libraries) on github.com/macstab,
  with a one-line "why compose" explanation under each layer.
  Makes the wider toolkit discoverable from any of the three repos.

* Operation-type count corrected from 57 to 62 (matches the now-
  complete Phase4 coverage; SYSTEM_CLOCK_*/METHOD_*/LIFECYCLE remain
  out-of-scope by JVM constraint, missing-feature, or by design).

* New "About the Engineer" section before the trailing author block.
  States areas of practice that informed the design (JVM internals,
  distributed-system reliability, Linux systems programming,
  framework integration), then signals limited consulting capacity
  with concrete contact paths. Designed to make the reader find the
  author rather than the author find the reader.

* License callout reframed from "see LICENSE" to a direct statement
  of what Apache 2.0 actually permits (production use, vendored
  inclusion, for